--- a/.gitignore
+++ b/.gitignore
@@ -256,4 +256,4 @@ target/m2e-wtp/web-resources/META-INF/maven/com.javassem/basic/pom.properties
 #db
 db.py
 
-webdriver/chromedriver.exe
+/webdriver/chromedriver.exe
